[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "fnv-hash-fast==0.5.0",
    "homeassistant==2023.12.1",
    "psutil-home-assistant==0.0.1",
    "sqlalchemy==2.0.27",
    "voluptuous==0.13.1",
]
